    * Lets DefaultResourceRetriever implement RestrictedResourceRetriever.

version 5.0-alpha14 (2015-12-08)
    * Fixes cache update bug in RemoteJWKSet.
    * Simplifies JWEDecryptionKeySelector.
    * Updates ImmutableClientSecret and ImmutableJWKSet.
    * Modifies KeyConverter.toJavaKeys to include private keys.
    * Upgrades to Nimbus JOSE+JWT 4.10.

version 5.0-alpha15 (2015-12-08)
    * Adds clock skew support to IDTokenVerifier and IDTokenClaimsVerifier.

version 5.0 (2015-12-15)
    * Adds SAML 2.0 assertion package with simple factory and validator.
    * Renames IDTokenVerifier to IDTokenValidator to fix terminology and
      compliance with spec.
    * Makes IDTokenValidator ClockSkewAware.
    * Adds AccessTokenValidator (at_hash).
    * Adds AuthorizationCodeValidator (c_hash).
    * Refactors AuthenticationRequestResolver for new JWT processor framework.
    * Removes obsolete JWTDecoder interface and default implementation.
    * Adds AMR constants from draft-jones-oauth-amr-values-02.
    * AuthenticationRequest no longer parses unspecified display as default
      "page".
    * Upgrades to Nimbus JOSE+JWT 4.11.

version 5.1 (2015-12-17)
    * Lets SAML2AssertionValidator accept java.security.Key instances.

version 5.1.1 (2016-01-07)
    * Fixes NPE in SAML2AssertionValidator.validate on missing XML signature.

version 5.2 (2016-01-19)
    * Overrides equals and hashCode for AuthorizationCodeGrant.
    * Overrides equals and hashCode for ResourceOwnerPasswordCredentialsGrant.
    * Overrides equals and hashCode for RefreshTokenGrant.
    * Overrides equals and hashCode for SAML2BearerGrant.
    * ClientMetadata.applyDefaults set token_endpoint_auth_method to 'none' for
      implicit authorisation grant (iss #163).

version 5.3 (2015-01-27)
    * Adds public client support to TokenRevocationRequest (issue #164).
    * Fixes authorisation response JavaDocs concerning use of relative callback
      URIs (issue #162).