@@ -1,0 +1,5 @@
+/**
+ * Proof Key for Code Exchange (PKCE) classes. Intended for public OAuth
+ * clients.
+ */
+package com.nimbusds.oauth2.sdk.pkce;
