@@ -435,6 +435,8 @@ version 5.2 (2016-01-19)
       implicit authorisation grant (iss #163).
 
 version 5.3 (2015-01-27)
+    * Adds support for Proof Key for Code Exchange by OAuth Public Clients (RFC
+      7636).
     * Adds public client support to TokenRevocationRequest (issue #164).
     * Fixes authorisation response JavaDocs concerning use of relative callback
       URIs (issue #162).
